# Arqemo

./: Cargo.toml  JOURNAL.md  test_theme.toml
.claude/: CLAUDE.md  architecture.md  conventions.md  phases.md  schema.md
TODO/: README.md  phase0.md
TODO/Phase0/: TODO-2026-03-13-module-docs.md  TODO-2026-03-13.md  TODO-2026-03-14.md  TODO-2026-03-18.md  TODO-2026-03-19.md
crates/arqemo-audio/: Cargo.toml
crates/arqemo-cli/: Cargo.toml
crates/arqemo-cli/src/: main.rs
crates/arqemo-color/: Cargo.toml
crates/arqemo-core/: Cargo.toml
crates/arqemo-core/src/: cache.rs  lib.rs  schema.rs  template.rs  validate.rs
crates/arqemo-core/src/apply/: error.rs  hyprland.rs  mod.rs  preflight.rs  wallpaper.rs
crates/arqemo-core/src/cache/: error.rs  mod.rs
crates/arqemo-core/src/config/: error.rs  mod.rs  registry.rs  root.rs
crates/arqemo-core/src/validate/: errors.rs  file.rs  mod.rs  semantic.rs
crates/arqemo-core/tests/: cache_tester.rs  config_reader.rs  schema_invalid.rs  schema_valid.rs  semantic_testing.rs  template_rendering.rs  toml_validation.rs
crates/arqemo-ipc/: Cargo.toml
crates/arqemo-ipc/src/: lib.rs
crates/arqemo-renderer/: Cargo.toml
tools/dev_scripts/: claude_initializer.sh
