[workspace]
members = [
    "crates/arqemo-cli",
    "crates/arqemo-core",
    "crates/arqemo-ipc",
    "crates/arqemo-renderer",
    "crates/arqemo-audio",
    "crates/arqemo-color",
]
resolver = "2"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
todo        = "warn"
pedantic    = { level = "warn", priority = -1 }

[workspace.lints.rust]
unused_imports = "warn"
dead_code      = "warn"
