[package]
name = "arqemo-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "arqemo"
path = "src/main.rs"

[dependencies]
arqemo-core = { path = "../arqemo-core" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tokio = { version = "1", features = ["full"] }

[lints]
workspace = true
