[package]
name = "arqemo-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tera = "1"
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
dirs = "5"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
